Update for compatibility with current Yamli API
Also allow for HTTPS connections and check if server is reachable before
connection tests.

Fixes #1.

--- a/dist.ini
+++ b/dist.ini
@@ -23,7 +23,7 @@ type = pod
 filename = README.pod
 location = root
 
-[Git::CommitBuild]
+;[Git::CommitBuild]
 [MinimumPerl]
 [Test::MinimumVersion]
 max_target_perl = 5.8
